@@ -13,6 +13,7 @@ Modules/
 Lib/
 * removed all dependencies on modules string and types
 * removed use of .has_key()
+* removed class ldap.ldapobject.NonblockingLDAPObject
 * new global constant ldap.LIBLDAP_API_INFO
 * right after importing _ldap there is a call into libldap to initialize it
 * method .decodeControlValue() of SSSResponseControl and VLVResponseControl
